Create dialog fragment for select payment medthod and Update UpdateOrder api to send payment method are "fullpayment" or "installment"

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -287,4 +287,5 @@
     <string name="product_delivery">การจัดส่ง / รับประกัน / คืนเงิน</string>
     <string name="full">ไม่ว่าง</string>
     <string name="free">ว่าง</string>
+    <string name="select_payment_types">เลือกวิธีการจ่ายเงิน</string>
 </resources>
