Check payment methods response return empty array

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -288,4 +288,5 @@
     <string name="full">ไม่ว่าง</string>
     <string name="free">ว่าง</string>
     <string name="select_payment_types">เลือกวิธีการจ่ายเงิน</string>
+    <string name="not_found_payment_methods">ไม่พบวิธีการจ่ายเงิน</string>
 </resources>
