--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,4 +286,5 @@
     <string name="full">FULL</string>
     <string name="free">FREE</string>
     <string name="select_payment_types">Select a payment method</string>
+    <string name="not_found_payment_methods">Not found payment method.</string>
 </resources>
