Change payment method dialog fragment to create new page fragment follow web design about select payment method

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -289,4 +289,6 @@
     <string name="free">ว่าง</string>
     <string name="select_payment_types">เลือกวิธีการจ่ายเงิน</string>
     <string name="not_found_payment_methods">ไม่พบวิธีการจ่ายเงิน</string>
+    <string name="fullpayment">บัตรเครดิต (ชำระเงินเต็มจำนวน)</string>
+    <string name="installment">เลือกการผ่อนชำระสินค้า</string>
 </resources>
