--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,4 +287,6 @@
     <string name="free">FREE</string>
     <string name="select_payment_types">Select a payment method</string>
     <string name="not_found_payment_methods">Not found payment method.</string>
+    <string name="fullpayment">Credit Card (Full Payment)</string>
+    <string name="installment">Pay by Installment</string>
 </resources>
