--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,4 +289,7 @@
     <string name="not_found_payment_methods">Not found payment method.</string>
     <string name="fullpayment">Credit Card (Full Payment)</string>
     <string name="installment">Pay by Installment</string>
+    <string name="require_tax">Do you require a full tax invoice?</string>
+    <string name="company">Company</string>
+    <string name="tax_id">Tax ID/ID no.</string>
 </resources>
