--- a/app/src/cdsDebug/res/values/strings.xml
+++ b/app/src/cdsDebug/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">Central Department Store</string>
+    <string name="watermark_business" translatable="false">Central Department Store</string>
+    <string name="watermark_environment" translatable="false">Dev</string>
 </resources>
