Added Constants file and String file for prepare all build variants of RBS [Release, Dev, Staging, Uat]

--- a/app/src/rbsRelease/res/values/strings.xml
+++ b/app/src/rbsRelease/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="app_name" translatable="false">Robinson Staging</string>
     <string name="watermark_business" translatable="false">Robinson</string>
-    <string name="watermark_environment" translatable="false">Staging</string>
+    <string name="watermark_environment" translatable="false">Release</string>
 </resources>
