--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -299,4 +299,8 @@
     <string name="company">บริษัท</string>
     <string name="tax_id">เลขประจำตัวผู้เสียภาษี/เลขที่บัตรประจำตัวประชาชน</string>
     <string name="created_order">สร้างคำสั่งซื้อแล้ว</string>
+    <string name="privacy_description">เมื่อคลิก \'ชำระเงิน\' แสดงว่าคุณได้ยอมรับ</string>
+    <string name="pay_credit_card_description">จ่ายง่ายๆ ด้วยบัตรเครดิตของคุณ มั่นใจ ปลอดภัยด้วยความปลอดภัย SSL ระดับสูง</string>
+    <string name="cod_description">พนักงานของเราจะนำส่งของให้คุณถึงที่ คุณจะได้เห็นสินค้าจริงก่อนชำระเงิน</string>
+    <string name="pay_at_store">จ่ายที่ร้านค้าได้ทันทีหลังจากยืนยันคำสั่งซื้อ</string>
 </resources>
