QRCode can press for display QRCode dialog big size and Changed text description bottom of QRCode

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -311,5 +311,7 @@
     <string name="title_earn_t1c_option">รับคะแนน T1</string>
     <string name="t1_change">เปลี่ยน</string>
     <string name="information">ข้อมูล</string>
+    <string name="close">ปิด</string>
+    <string name="payment_description">แสกนโค้ดเพื่อชำระเงินสำหรับคำสั่งซื้อนี้</string>
 
 </resources>
