--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,4 +309,6 @@
     <string name="title_earn_t1c_option">Earn T1 points</string>
     <string name="t1_change">Change</string>
     <string name="information">Information</string>
+    <string name="close">Close</string>
+    <string name="payment_description">Scan QR code to pay for this order.</string>
 </resources>
