--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,8 +49,7 @@
     <string name="cancel">Cancel</string>
     <string name="product_code">Product Code: </string>
     <string name="the_1_card">Redeem your point %1$,d points</string>
-    <string name="alert_compare">มีการเพิ่มสินค้า</string>
-    <string name="alert_compare_yes">\nเรียบร้อยแล้ว</string>
+    <string name="format_alert_compare">Has been added %s</string>
     <string name="alert_count">จำนวนสินค้ามากกว่าที่ Store กำหนด</string>
     <string name="alert_stock">สินค้าไม่มีในคลังสินค้า</string>
     <string name="add_to_cart">Add to cart</string>
