--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,7 @@
     <string name="label_billing_address">Billing Address</string>
     <string name="label_shipping_type">Delivery type</string>
     <string name="label_delivery_info">Delivery option</string>
+    <string name="label_the_one_number">The 1 No.</string>
     <string name="delivery_price">Delivery price</string>
 
     <!-- Shared Preference -->
