--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -63,6 +63,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="rating">ความนิยม</string>
+    <string name="clear_all">ลบทั้งหมด</string>
+    <string name="text_comfirm_clear_all">ต้องการลบสินค้าทั้งหมดออกจากหน้าเปรียบเทียบใช่หรือไม่</string>
 
     <!-- Search -->
     <string name="clear_history">Clear History</string>
