--- a/app/src/cdsStaging/res/values/strings.xml
+++ b/app/src/cdsStaging/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Central Department Store</string>
+    <string name="app_name" translatable="false">E-Ordering - Staging</string>
     <string name="watermark_business" translatable="false">Central Department Store</string>
     <string name="watermark_environment" translatable="false">Staging(headless)</string>
 </resources>
