--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -50,7 +50,7 @@
     <string name="product_code">รหัสสินค้า: </string>
     <string name="the_1_card">Redeem your point %1$,d points</string>
     <string name="format_alert_compare">มีการเพิ่มสินค้า %s เรียบร้อยแล้ว</string>
-    <string name="alert_count">จำนวนสินค้ามากกว่าที่ Store กำหนด</string>
+    <string name="alert_count">รายการเปรียบเทียบสินค้าครบ 4 รายการแล้ว</string>
     <string name="alert_stock">สินค้าไม่มีในคลังสินค้า</string>
     <string name="add_to_cart">ใส่รถเข็น</string>
     <string name="tab_promotion">โปรโมชั่นและของแถม</string>
