--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -304,5 +304,5 @@
     <string name="label_stock_availability">สต๊อกสินค้า</string>
     <string name="label_stock_online">ออนไลน์</string>
     <string name="label_stock_store_offline">สาขานี้</string>
-    <string name="label_stock_stores_offline">สาขาอื่น</string>
+    <string name="label_stock_stores_offline"><u>สาขาอื่น</u></string>
 </resources>
