--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -302,5 +302,5 @@
     <string name="label_stock_availability">Stock Availability</string>
     <string name="label_stock_online">Online</string>
     <string name="label_stock_store_offline">Current Store</string>
-    <string name="label_stock_stores_offline">Other Stores</string>
+    <string name="label_stock_stores_offline"><u>Other Stores</u></string>
 </resources>
