--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="tab_delivery">Arrange Delivery</string>
     <string name="size">Size:</string>
     <string name="shade">Shade:</string>
+    <string name="add_two_hour_item">2H Pick up</string>
 
     <!-- Compare -->
     <string name="compare_header">Compare products</string>
