--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,6 +234,7 @@
     <string name="error_form_name_en">Invalid name</string>
     <string name="error_verify_otp_time_out">Sorry connection error</string>
     <string name="delivery">Arrange Delivery</string>
+    <string name="delivery_2hr_pickup">2H Pick up store</string>
     <string name="select_store_title">Choose store to collect from</string>
     <string name="store_address">Store address</string>
     <string name="telephone_number">Tel no.</string>
