--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,6 +233,8 @@
     <string name="error_form_passport_invalid">Incorrect Passport</string>
     <string name="error_form_name_en">Invalid name</string>
     <string name="error_verify_otp_time_out">Sorry connection error</string>
+
+    <!-- Stores -->
     <string name="delivery">Arrange Delivery</string>
     <string name="delivery_2hr_pickup">2H Pick up store</string>
     <string name="select_store_title">Choose store to collect from</string>
@@ -261,6 +263,8 @@
     <string name="staff_descriptions_dialog">1. Please ask customer to go to cashier\n2. Show order confirmation screen to cashier\n3. When customer already paid, ask cashier to login to powerbuy.co.th/bonjour\n4. Go to that order then click at "Paid" button to complete process</string>
     <string name="product_not_have_delivery">This item is excluding installation service.</string>
     <string name="cannot_get_shipping_slot">Sorry, data is temporary unavailable.</string>
+    <string name="format_store_ispu_delivery">Order now, pick up in-store From %s</string>
+
     <!-- Network state -->
     <string name="network_connect_error">No internet</string>
     <string name="network_state_connected">Connected</string>
