--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -314,4 +314,5 @@
     <string name="label_stock_online">ออนไลน์</string>
     <string name="label_stock_store_offline">สาขานี้</string>
     <string name="label_stock_stores_offline"><u>สาขาอื่น</u></string>
+    <string name="discount">ส่วนลด</string>
 </resources>
