--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,6 +268,7 @@
     <string name="product_not_have_delivery">This item is excluding installation service.</string>
     <string name="cannot_get_shipping_slot">Sorry, data is temporary unavailable.</string>
     <string name="format_store_ispu_delivery">Order now, pick up in-store\nFrom %s</string>
+    <string name="error_store_pickup_empty">There is no available store that have all of your selected items.</string>
 
     <!-- Network state -->
     <string name="network_connect_error">No internet</string>
