EO-221, EO-222 Created share button for share payment link on SuccessFragment and History page

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -332,4 +332,5 @@
     <string name="label_stock_online">ออนไลน์</string>
     <string name="label_stock_store_offline">สาขานี้</string>
     <string name="label_stock_stores_offline"><u>สาขาอื่น</u></string>
+    <string name="share_payment_link"><u>แชร์ลิ้งค์จ่ายเงิน</u></string>
 </resources>
