--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -333,4 +333,5 @@
     <string name="label_stock_store_offline">สาขานี้</string>
     <string name="label_stock_stores_offline"><u>สาขาอื่น</u></string>
     <string name="share_payment_link"><u>แชร์ลิ้งค์จ่ายเงิน</u></string>
+    <string name="error_tax_invalid">กรุณาระบุตัวเลขขั้นต่ำ 13 ตัวอักษร</string>
 </resources>
