--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -332,4 +332,5 @@
     <string name="label_stock_store_offline">Current Store</string>
     <string name="label_stock_stores_offline"><u>Other Stores</u></string>
     <string name="share_payment_link"><u>Share payment link</u></string>
+    <string name="error_tax_invalid">Please enter minimum length of 13 characters, number only</string>
 </resources>
